# rustation-libretro

./: .gitmodules  Cargo.toml  README.md  rsx.h
src/: lib.rs  libretro.rs  retrogl.rs  retrolog.rs  savestate.rs  vcd.rs
src/debugger/: bios.rs  mod.rs
src/debugger/gdb/: mod.rs
src/renderer/: mod.rs
src/renderer/shaders/: command_fragment.glsl  command_vertex.glsl  image_load_fragment.glsl  image_load_vertex.glsl  output_fragment.glsl
src/retrogl/: buffer.rs  dummy_state.rs  error.rs  framebuffer.rs  gl_state.rs  mod.rs  program.rs  shader.rs  texture.rs  types.rs  uniform.rs  vertex.rs
src/retrogl/gl_state/: mod.rs
src/retrogl/gl_state/shaders/: command_fragment.glsl  command_vertex.glsl  image_load_fragment.glsl  output_fragment.glsl  output_vertex.glsl
src/retrogl/shaders/: fragment.glsl  vertex.glsl
